--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<!-- Open Graph tags para mídia social -->
 	<meta property="og:title" content="$monkaS On SOL">
-	<meta property="og:description" content="$monkaS is a Token On ETH Block Chain">
+	<meta property="og:description" content="$monkaS is a Token On Solana Block Chain">
 	<meta property="og:image" content="logopnggassa.png">
 	<meta property="og:url" content="https://monkas.top/">
 
