--- a/index.htm
+++ b/index.htm
@@ -5034,7 +5034,7 @@ of a nervous pepe on Solana</p>
                                       <p>
                                         <span class="Apple-converted-space"
                                           > </span
-                                        >• Dexsreener Update
+                                        >• Dexscreener Update
                                       </p>
                                     </div>
                                   </div>
