--- a/index.html
+++ b/index.html
@@ -3589,7 +3589,7 @@
                                         <span class="elementor-grid-item">
                                           <a
                                             class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-6cc7059"
-                                            href="https://t.me/"
+                                            href="https://t.me/monkascoinsol"
                                             target="_blank"
                                           >
                                             <span class="elementor-screen-only"
@@ -3603,7 +3603,7 @@
                                         <span class="elementor-grid-item">
                                           <a
                                             class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-ef069db"
-                                            href="https://x.com/"
+                                            href="https://x.com/monkascoinsol
                                             target="_blank"
                                           >
                                             <span class="elementor-screen-only"
