--- a/index.html
+++ b/index.html
@@ -3603,7 +3603,7 @@
                                         <span class="elementor-grid-item">
                                           <a
                                             class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-ef069db"
-                                            href="https://x.com/monkascoinsol
+                                            href="https://x.com/monkascoinsol"
                                             target="_blank"
                                           >
                                             <span class="elementor-screen-only"
