--- a/index.html
+++ b/index.html
@@ -5024,17 +5024,17 @@ of a nervous pepe on Solana</p>
                                       <p>
                                         <span class="Apple-converted-space"
                                           > </span
-                                        >• Launch on Pump.fun
+                                        >•Meme
                                       </p>
                                       <p>
                                         <span class="Apple-converted-space"
                                           > </span
-                                        >• 500+ Holders
+                                        >
                                       </p>
                                       <p>
                                         <span class="Apple-converted-space"
                                           > </span
-                                        >• Dexscreener Update
+                                        >
                                       </p>
                                     </div>
                                   </div>
@@ -5081,17 +5081,17 @@ of a nervous pepe on Solana</p>
                                       <p>
                                         <span class="Apple-converted-space"
                                           > </span
-                                        >• Inital Marketing Campaign 
+                                        >•Vibe and HODL
                                       </p>
                                       <p>
                                         <span class="Apple-converted-space"
                                           > </span
-                                        >• First Meme Contest 
+                                        >
                                       </p>
                                       <p>
                                         <span class="Apple-converted-space"
                                           > </span
-                                        >• KOL Partnerships
+                                        >
                                       </p>
                                     </div>
                                   </div>
@@ -5138,17 +5138,17 @@ of a nervous pepe on Solana</p>
                                       <p>
                                         <span class="Apple-converted-space"
                                           > </span
-                                        >• CoinGecko and CMC Listing
+                                        >•Meme Takeover
                                       </p>
                                       <p>
                                         <span class="Apple-converted-space"
                                           > </span
-                                        >• Partnetship with Top Projects 
+                                        >
                                       </p>
                                       <p>
                                         <span class="Apple-converted-space"
                                           > </span
-                                        >• CEX Listings
+                                        >
                                       </p>
                                     </div>
                                   </div>
@@ -5195,17 +5195,17 @@ of a nervous pepe on Solana</p>
                                       <p>
                                         <span class="Apple-converted-space"
                                           > </span
-                                        >• 10,000+ Holders
-                                      </p>
-                                      <p>
-                                        <span class="Apple-converted-space"
-                                          > </span
-                                        >• MonkaS merchandise
-                                      </p>
-                                      <p>
-                                        <span class="Apple-converted-space"
-                                          > </span
                                         >• Get new girlfren
+                                      </p>
+                                      <p>
+                                        <span class="Apple-converted-space"
+                                          > </span
+                                        >
+                                      </p>
+                                      <p>
+                                        <span class="Apple-converted-space"
+                                          > </span
+                                        >
                                       </p>
                                     </div>
                                   </div>
